--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server"
   },
   "engines": {
     "node": "^12.18.3",
@@ -18,10 +18,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
+    "mongoose": "^6.0.12",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": " "
